# ibus-anthy

./: AUTHORS  Makefile.am  README  autogen.sh  configure.ac  ibus-anthy.spec.in
data/: Makefile.am  oldchar.t  symbol.t
debian/: changelog  control  copyright  rules  watch
engine/: Makefile.am  anthy.engine.in  anthy.i  anthy.xml.in  anthy.xml.in.in  compose.py  engine.py  factory.py  ibus-engine-anthy.in  jastring.py  kana.py  main.py  romaji.py  segment.py  tables.py  thumb.py
icons/: Makefile.am
m4/: Makefile.am
po/: LINGUAS  Makevars  POTFILES.in  POTFILES.skip  fr.po  ibus-anthy.pot  ja.po  zh_CN.po
setup/: Makefile.am  anthyprefs.py  anthyprefs.py.in  ibus-setup-anthy.in  main.py  prefs.py  setup.glade
